# godot-3dtiles

./: .gitignore  CMakeLists.txt  README.md  node_3d.tscn  project.godot
addons/: cesium-godot.gdextension
cmake/: CompilerWarnings.cmake
demo/: node_3d.tscn  project.godot
demo/addons/: godot-3dtiles.gdextension
scripts/: configure_debug.bat  configure_release.bat  debug_build_install.bat  release_build_install.bat
src/: CMakeLists.txt  CameraManager.cpp  CameraManager.h  Cesium.cpp  Cesium.h  Cesium3DTileset.cpp  Cesium3DTileset.h  CesiumEllipsoid.cpp  CesiumEllipsoid.h  CesiumGeoreference.cpp  CesiumGeoreference.h  CesiumImageryProvider.cpp  CesiumImageryProvider.h  CesiumOriginAuthority.cpp  CesiumOriginAuthority.h  CesiumTileExcluder.h  CesiumTilesetExcluder.cpp  Enums.hpp  Example.cpp  Example.h  FileHelper.cpp  FileHelper.h  GodotAssetAccessor.cpp  GodotAssetAccessor.h  GodotPrepareRendererResources.cpp  GodotPrepareRendererResources.h  GodotTaskProcessor.cpp  GodotTaskProcessor.h  GodotTilesetExternals.cpp  GodotTilesetExternals.h  HttpClientTest.cpp  HttpClientTest.h  RegisterExtension.cpp  ThreadUtils.hpp  TilesetMaterialProperties.cpp  TilesetMaterialProperties.h  cesiumTestSuite.cpp  cesiumTestSuite.h
src/shaders/: overlay_materials.glsl
templates/: CMakeLists.txt  template.debug.gdextension.in  template.gdextension.in  template.release.gdextension.in
